--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="#portfolio">Projects</a></li>
             <li><a href="#education">Background</a></li>
             <li><a href="#services">Certification</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </header>
 
@@ -225,7 +226,7 @@
             </div>
 
             <div class="row">
-                <img src="img/255637244-e8582d17-b6b5-4c82-ab77-ff4559290e5c.PNG">
+                <img src="img/255637244-e8582d17-b6b5-4c82-ab77-ff4559290e5c.png">
                 <div class="main-row">
                     <div class="row-text">
                         <h5>Movie Recommendation System using Machine Learning</h5>
@@ -307,7 +308,7 @@
                 <p>Dearborn, MI, United States</p>
                 <ul>
                     <li>Coursework: Big Data Analytics and Visualization, Applied Regression Analysis, Machine Learning and Computational Statistics, Advanced Artificial Intelligence</li>
-                  
+                    <li>Grade: </li>
                    
                 </ul>
             </div>
@@ -432,6 +433,27 @@
         </div>
     </div>
 </section>
+
+<section id="contact" style="padding: 60px 0;">
+    <div style="margin-bottom: 40px;">
+        <h2 style="font-size: var(--h2-font); color: var(--main-color); margin-left: 55px;">Contact <span style="color: var(--text-color);">Me</span></h2>
+        <p style="font-size: var(--p-font); color: var(--other-color); margin-left: 55px; margin-right: 55px; text-align: justify; width: auto; max-width: 100%; margin-top: 10px;">
+            Thank you for visiting my website. I am currently seeking summer internships in 2025 for Data Science and AI/ML Engineer positions. If my skills and profile align with your organization's needs, please feel free to contact me!
+        </p>
+    </div>
+    <div style="display: flex; justify-content: center;">
+        <div style="background: var(--second-bg-color); padding: 40px; border-radius: 10px; width: 100%; max-width: 500px; color: var(--text-color); font-size: var(--p-font);">
+            <p><strong>Email:</strong> <a href="mailto:sagroy@umich.edu" style="color: var(--main-color);">sagroy@umich.edu</a></p>
+            <!-- <p><strong>Phone:</strong> <a href="tel:+919920180957" style="color: var(--main-color);">+91 9920180957</a></p> -->
+            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/sagnikroy10/" target="_blank" style="color: var(--main-color);">sagnikroy10</a></p>
+        </div>
+    </div>
+</section>
+
+
+
+
+
 
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
