--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="social">
                 <a href="https://www.linkedin.com/in/sagnikroy10/"><i class="ri-linkedin-box-line"></i></a>
                 <a href="https://github.com/sagnikroy10"><i class="ri-github-line"></i></a>
-                <a href="files/Sagnik Roy.pdf" class="btn btn2">Download CV</a>
+                <a href="files/Sagnik Roy-Resume.pdf.pdf" class="btn btn2">Download CV</a>
             </div>
         </div>
         <div class="about-img">
@@ -226,7 +226,7 @@
             </div>
 
             <div class="row">
-                <img src="img/255637244-e8582d17-b6b5-4c82-ab77-ff4559290e5c.png">
+                <img src="img/255637244-e8582d17-b6b5-4c82-ab77-ff4559290e5c.PNG">
                 <div class="main-row">
                     <div class="row-text">
                         <h5>Movie Recommendation System using Machine Learning</h5>
