--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="social">
                 <a href="https://www.linkedin.com/in/sagnikroy10/"><i class="ri-linkedin-box-line"></i></a>
                 <a href="https://github.com/sagnikroy10"><i class="ri-github-line"></i></a>
-                <a href="files/Sagnik Roy-Resume.pdf.pdf" class="btn btn2">Download CV</a>
+                <a href="files/Sagnik Roy-Resume.pdf" class="btn btn2">Download CV</a>
             </div>
         </div>
         <div class="about-img">
