--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
 
             <div class="row">
-                <img src="img/255637244-e8582d17-b6b5-4c82-ab77-ff4559290e5c.png">
+                <img src="img/255637244-e8582d17-b6b5-4c82-ab77-ff4559290e5c.PNG">
                 <div class="main-row">
                     <div class="row-text">
                         <h5>Movie Recommendation System using Machine Learning</h5>
@@ -290,22 +290,7 @@
             <h4>Utilized regression based machine learning models to forecast a student's expected score percentage by analyzing their study hours.It is also focused on analyzing data, creating visualizations and predictive modeling</h4>
             </div>
             <div class="row">
-                <img src="img/hospital.png">
-                <div class="main-row">
-                    <div class="row-text">
-                        <h5>Predicting 30-Day Hospital Readmissions in Diabetic Patients</h5>
-                    </div>
-                <div class="row-icon">
-                    <a href="https://github.com/sagnikroy10/Predicting-30-Day-Hospital-Readmissions-in-Diabetic-Patients.git"><i class="ri-github-fill"></i></a>
-                </div>
-            </div>
-            <h4>This project focuses on predicting whether diabetic patients will be readmitted to the hospital within 30 days. Hospital readmissions are a critical indicator of healthcare quality and resource utilization. Using classification machine learning models and a comprehensive dataset from the UCI Machine Learning Repository, we aimed to improve healthcare outcomes by identifying high-risk patients.</h4>
-            </div>
-        </div>
-</section>
-
-
-<section id="education">
+                <img src="img\hospital.png"
     <div class="center-text">
         <h2>My <span>Journey</span></h2>
     </div>
