--- a/index.html
+++ b/index.html
@@ -290,7 +290,14 @@
             <h4>Utilized regression based machine learning models to forecast a student's expected score percentage by analyzing their study hours.It is also focused on analyzing data, creating visualizations and predictive modeling</h4>
             </div>
             <div class="row">
-                <img src="img\hospital.png"
+                <img src="img/hospital.png"
+            <h4>This project focuses on predicting whether diabetic patients will be readmitted to the hospital within 30 days. Hospital readmissions are a critical indicator of healthcare quality and resource utilization. Using classification machine learning models and a comprehensive dataset from the UCI Machine Learning Repository, we aimed to improve healthcare outcomes by identifying high-risk patients.</h4>
+            </div>
+        </div>
+</section>
+
+
+<section id="education">
     <div class="center-text">
         <h2>My <span>Journey</span></h2>
     </div>
